# Telecoupling-Agentic-AI

./: .env.example  .gitignore  AGENTIC_WORKFLOW.md  AgenticWorkflow.md  README.md  download_sample_data.py  pyproject.toml
.claude/: settings.json
backend/: config.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  state.py
backend/app/models/: agent.py
backend/app/routers/: agent.py  files.py  jobs.py
backend/app/services/: agent.py  classifier.py  job_store.py  mcp_client.py
backend/shared/: __init__.py  utils.py
backend/tests/: conftest.py  test_api.py  test_environment.py  test_tools_full.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPanel.tsx  MessageBubble.tsx  Sidebar.tsx  ThinkingIndicator.tsx  ToolCallCard.tsx
mcp-servers/invest-mcp/: .env.example  README.md  fetch_invest_docs.py  invest_docs_cache.json  nan_to_mcp.py  pyproject.toml  server.py  setup.sh  utils.py
mcp-servers/invest-mcp/.claude/: settings.json
mcp-servers/qgis-mcp/: run_qgis_mcp.sh  server.py  utils.py
