[project]
name = "telecoupling-app"
version = "0.1.0"
description = "Agentic AI platform for environmental geospatial analysis"
requires-python = ">=3.11"
dependencies = [
    "natcap.invest>=3.14",
    "mcp>=1.0",
    "google-generativeai>=0.8",
    "fastapi>=0.100",
    "uvicorn>=0.40",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "fiona>=1.9",
    "shapely>=2.0",
    "aiofiles>=24.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
